--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@ nav ul a:hover {
 }
 .hamburgerMenu {
   color: var(--bg-color1);
-  padding: 1em;
+  padding: 1em 2em 1em 1em;
   display: none;
 }
 .hamburgerMenu:hover {
