--- a/styles.css
+++ b/styles.css
@@ -506,7 +506,7 @@ footer {
 }
 @media only screen and (max-width: 1153px) {
   header nav h1 a{
-    padding-left: 0;
+    padding-left: 0.5em;
     font-size: 4em;
   }
   .navigation {
