--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ nav ul a:hover {
 
 .mobileMenu {
   overflow: hidden;
-  background-color: #333;
+  background-color: var(--bg-color1);
   position: relative;
 }
 
@@ -95,7 +95,7 @@ nav ul a:hover {
 }
 
 .mobileMenu a {
-  color: white;
+  color: var(--bg-color2);
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
@@ -103,8 +103,8 @@ nav ul a:hover {
 }
 
 .mobileMenu a:hover {
-  background-color: #ddd;
-  color: black;
+  background-color: var(--bg-color2);
+  color: var(--bg-color1);
 }
 
 nav {
