--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,7 @@ nav ul a:hover {
   text-decoration: none;
   font-size: 17px;
   display: block;
+  border: 2px solid var(--bg-color2)
 }
 
 .mobileMenu a:hover {
