--- a/styles.css
+++ b/styles.css
@@ -96,11 +96,13 @@ nav ul a:hover {
 
 .mobileMenu a {
   color: var(--bg-color2);
-  padding: 14px 16px;
+  padding-top: 1em;
+  padding-bottom: 1em;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 2em;
   display: block;
   border: 2px solid var(--bg-color2)
+
 }
 
 .mobileMenu a:hover {
