--- a/styles.css
+++ b/styles.css
@@ -78,9 +78,9 @@ nav ul a:hover {
   background-color: var(--bg-color1);
   position: relative;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-  margin-left: 0%;
-  margin-right: 0%;
-  margin-top: 0%;
+  margin-left: -2em;
+  margin-right: -2em;
+  margin-top: -1em;
 }
 
 #mobileLinks{
