--- a/styles.css
+++ b/styles.css
@@ -507,7 +507,7 @@ footer {
   border-top: 2px solid var(--border-color)
 }
 
-#largeFlipboard{
+.largeFlipboard{
   width: 450px;
 	height: 450px;
 	-moz-border-radius: 1% 50% 30% 0;
@@ -526,7 +526,7 @@ footer {
   .mobileMenu {
     display: none;
   }
-  #smallFlipboard {
+  .smallFlipboard {
     display:none;
   }
 }
@@ -603,10 +603,10 @@ footer {
   .topBtn {
     margin-top: 2em;
   }
-  #smallFlipboard {
+  .smallFlipboard {
     display:block;
   }
-  #largeFlipboard {
+  .largeFlipboard {
     display:none;
   }
 }
