--- a/styles.css
+++ b/styles.css
@@ -506,28 +506,13 @@ footer {
   box-sizing: border-box;
   border-top: 2px solid var(--border-color)
 }
-
-.largeFlipboard{
-  width: 450px;
-	height: 450px;
-	-moz-border-radius: 1% 50% 30% 0;
-	-webkit-border-radius: 1% 50% 30% 0;
-	border-radius: 1% 50% 30% 0;
-	overflow:hidden;
-	position:relative;
-}
-#myFB{
-  width:100%;
-  height: 100%;
-  -webkit-filter: hue-rotate(40deg) saturate(3);
-  filter: hue-rotate(40deg) saturate(3);
+.smallFlipboard {
+  width: 200px;
+  height: auto;
 }
 @media only screen and (min-width: 1154px) {
   .mobileMenu {
     display: none;
-  }
-  .smallFlipboard {
-    display:none;
   }
 }
 @media only screen and (max-width: 1153px) {
@@ -602,12 +587,6 @@ footer {
   }
   .topBtn {
     margin-top: 2em;
-  }
-  .smallFlipboard {
-    display:block;
-  }
-  .largeFlipboard {
-    display:none;
   }
 }
 
