--- a/styles.css
+++ b/styles.css
@@ -506,8 +506,8 @@ footer {
   box-sizing: border-box;
   border-top: 2px solid var(--border-color)
 }
-.smallFlipboard {
-  width: 2000px;
+.smallFlipboard iframe{
+  width: 300px;
   height: auto;
 
 }
