--- a/styles.css
+++ b/styles.css
@@ -507,8 +507,8 @@ footer {
   border-top: 2px solid var(--border-color)
 }
 .smallFlipboard iframe{
-  width: 300px;
-  height: auto;
+  width: 300px !important;
+  height: auto !important;
 
 }
 @media only screen and (min-width: 1154px) {
