--- a/styles.css
+++ b/styles.css
@@ -514,6 +514,9 @@ footer {
   .smallFlipboard {
     display: none;
   }
+  .largeFlipboard {
+    display: block;
+  }
 }
 @media only screen and (max-width: 1153px) {
   header nav h1 a{
@@ -587,6 +590,9 @@ footer {
   }
   .topBtn {
     margin-top: 2em;
+  }
+  .smallFlipboard {
+    display: block;
   }
   .largeFlipboard {
     display: none;
