--- a/styles.css
+++ b/styles.css
@@ -522,6 +522,21 @@ footer {
   line-height: 1.5;
 }
 
+@media only screen and (min-width: 2140px) {
+  .mobileMenu {
+    display: none;
+  }
+  .fbSmall {
+    display: none;
+  }
+  .fbBig {
+    display: none;
+  }
+  .fbVeryBig {
+    display: block;
+  }
+}
+
 @media only screen and (min-width: 1154px) {
   .mobileMenu {
     display: none;
@@ -531,6 +546,9 @@ footer {
   }
   .fbBig {
     display: block;
+  }
+  .fbVeryBig {
+    display: none;
   }
 }
 @media only screen and (max-width: 1153px) {
@@ -610,6 +628,9 @@ footer {
     display: block;
   }
   .fbBig {
+    display: none;
+  }
+  .fbVeryBig {
     display: none;
   }
 }
