--- a/styles.css
+++ b/styles.css
@@ -522,6 +522,11 @@ footer {
   line-height: 1.5;
 }
 
+.abtContain {
+  margin: auto;
+  padding: 3em;
+}
+
 @media only screen and (min-width: 1154px) {
   .mobileMenu {
     display: none;
