--- a/styles.css
+++ b/styles.css
@@ -509,7 +509,7 @@ footer {
 
 .abtPage-flex {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   padding: 3em;
   margin: 3em;
   justify-content: space-around;
