--- a/styles.css
+++ b/styles.css
@@ -516,7 +516,7 @@ footer {
   align-items: center;
 }
 
-.abtPage-flex p{
+.abtmeContainer p{
   padding-left: 1.5;
   padding-right: 1.5em;
   line-height: 1.5;
