--- a/styles.css
+++ b/styles.css
@@ -526,8 +526,7 @@ footer {
   margin: auto;
   padding: 3em;
 }
-
-@media only screen and (min-width: 1154px) {
+@media only screen and (min-width: 1500px) {
   .mobileMenu {
     display: none;
   }
@@ -536,6 +535,17 @@ footer {
   }
   .fbBig {
     display: block;
+  }
+}
+@media only screen and (min-width: 1154px) {
+  .mobileMenu {
+    display: none;
+  }
+  .fbSmall {
+    display: block;
+  }
+  .fbBig {
+    display: none;
   }
 }
 @media only screen and (max-width: 1153px) {
