--- a/styles.css
+++ b/styles.css
@@ -537,7 +537,7 @@ footer {
     display: block;
   }
 }
-@media only screen and (min-width: 1154px) {
+@media only screen and (min-width: 1154px) and (max-width: 1499px) {
   .mobileMenu {
     display: none;
   }
