--- a/styles.css
+++ b/styles.css
@@ -526,7 +526,7 @@ footer {
   margin: auto;
   padding: 3em;
 }
-@media only screen and (min-width: 1400px) {
+@media only screen and (min-width: 2000px) {
   .mobileMenu {
     display: none;
   }
@@ -534,17 +534,23 @@ footer {
     display: none;
   }
   .fbBig {
+    display: none;
+  }
+  .fbVeryBig {
     display: block;
   }
 }
-@media only screen and (min-width: 1154px) and (max-width: 1399px) {
+@media only screen and (min-width: 1154px) and (max-width: 1999px) {
   .mobileMenu {
     display: none;
   }
   .fbSmall {
-    display: block;
+    display: none;
   }
   .fbBig {
+    display: block;
+  }
+  .fbVeryBig {
     display: none;
   }
 }
@@ -625,6 +631,9 @@ footer {
     display: block;
   }
   .fbBig {
+    display: none;
+  }
+  .fbVeryBig {
     display: none;
   }
 }
