--- a/styles.css
+++ b/styles.css
@@ -526,6 +526,16 @@ footer {
   margin: auto;
   padding: 3em;
 }
+
+.ytContainer {
+  margin-bottom: 2em;
+  margin-top: 2em;
+}
+.fbContainer {
+  margin-bottom: 2em;
+  margin-top: 2em;
+}
+
 @media only screen and (min-width: 2000px) {
   .mobileMenu {
     display: none;
