--- a/styles.css
+++ b/styles.css
@@ -549,6 +549,12 @@ footer {
   .fbVeryBig {
     display: block;
   }
+  .fbContainer {
+    margin-bottom: 4em;
+    margin-top: 2em;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 @media only screen and (min-width: 1154px) and (max-width: 1999px) {
   .mobileMenu {
