--- a/styles.css
+++ b/styles.css
@@ -656,8 +656,15 @@ footer {
   .fbVeryBig {
     display: none;
   }
+  body h2{
+    font-size: 1.75em;
+  }
+  body h3{
+    font-size: 1.5em;
+  }
   body p{
-    font-size: 1.2em;  
+    font-size: 1.4em;
+    line-height: 1.5;
   }
 }
 
