--- a/styles.css
+++ b/styles.css
@@ -559,6 +559,10 @@ footer {
     margin-left: auto;
     margin-right: auto;
   }
+  .marginify {
+    margin-left:8em;
+    margin-right:8em;
+  }
 }
 @media only screen and (min-width: 1154px) and (max-width: 1999px) {
   .mobileMenu {
@@ -572,6 +576,10 @@ footer {
   }
   .fbVeryBig {
     display: none;
+  }
+  .marginify {
+    margin-left:5em;
+    margin-right:5em;
   }
 }
 @media only screen and (max-width: 1153px) {
@@ -664,6 +672,10 @@ footer {
   }
   body p{
     font-size: 1.75em;
+  }
+  .marginify {
+    margin-left:1em;
+    margin-right:1em;
   }
 }
 
