--- a/styles.css
+++ b/styles.css
@@ -562,6 +562,9 @@ footer {
     margin-left:8em;
     margin-right:8em;
   }
+  .fbcontainer {
+    margin-bottom: 4em;
+  }
 }
 @media only screen and (min-width: 1154px) and (max-width: 1999px) {
   .mobileMenu {
@@ -579,6 +582,9 @@ footer {
   .marginify {
     margin-left:5em;
     margin-right:5em;
+  }
+  .fbcontainer {
+    margin-bottom: 4em;
   }
 }
 @media only screen and (max-width: 1153px) {
