--- a/styles.css
+++ b/styles.css
@@ -561,6 +561,7 @@ footer {
   .marginify {
     margin-left:8em;
     margin-right:8em;
+    font-size: 1.75em;
   }
   .fbcontainer {
     margin-bottom: 4em;
