--- a/styles.css
+++ b/styles.css
@@ -671,7 +671,7 @@ footer {
     margin-top: 2em;
   }
   .backBtn {
-    margin-top: 4em;
+    margin-top: 4em !important;
     margin-bottom: 2em;
   }
   .fbSmall {
