--- a/styles.css
+++ b/styles.css
@@ -405,7 +405,7 @@ ion-icon {
   color: var(--bg-color2);
 }
 .topBtnMargin {
-  margin-top: 3em;
+  margin-top: 3em !important;
 }
 .topBtn {
   margin-top: 0;
