--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,10 @@ body h3{
   color: var(--bg-color2);
   font-size: 1.5em;
 }
+body h4{
+  color: var(--bg-color2);
+  font-size: 1.25em;
+}
 body p{
   color: var(--bg-color2);
   font-size: 1.2em;
