--- a/styles.css
+++ b/styles.css
@@ -696,6 +696,9 @@ footer {
   body h3{
     font-size: 1.75em;
   }
+  body h4 {
+    font-size: 1.75em;
+  }
   body p{
     font-size: 1.75em;
   }
